--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/buildicon
 JWT_SECRET=pawan123456
+MONGO_URI = mongodb+srv://<username>:<password>@cluster0.xxxxx.mongodb.net/buildicon?retryWrites=true&w=majority
