--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/buildicon
 JWT_SECRET=pawan123456
-MONGO_URI = mongodb+srv://<username>:<password>@cluster0.xxxxx.mongodb.net/buildicon?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://MongoDB>:Ril@123@cluster0.xxxxx.mongodb.net/buildicon?retryWrites=true&w=majority
