--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/buildicon
+MONGO_URI=MONGO_URI=mongodb+srv://chouhanpawan:pawan123@cluster0.tydzoqp.mongodb.net/buildicon
 JWT_SECRET=pawan123456
